# xPeerd_Evaluation

./: README.md  TRACE_R_xPeerd_Evaluation_2026_v3_0_0.ipynb  xPeerdEvaluation.py
TRACE_R_reproducibility/: .zenodo.json  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  METHODS.md  Makefile  PUBLICATION_CHECKLIST.md  README.md  REPRODUCTION_TEST_REPORT.md  TRACE_R_reproducible.ipynb  compare_reference.py  environment.yml  pyproject.toml  requirements-colab.txt  requirements-lock.txt  run_reproduction.sh  run_trace_r.py
TRACE_R_reproducibility/checksums/: source_MD5SUMS  source_SHA256SUMS
TRACE_R_reproducibility/config/: trace_r_v1.0.0.json
TRACE_R_reproducibility/reference/: expected_counts.json  reference_table_hashes.csv
TRACE_R_reproducibility/src/trace_r/: acquisition.py  cli.py  pipeline.py
TRACE_R_reproducibility/src/trace_r/pipeline_parts/: part_00.pyfrag  part_01.pyfrag  part_02.pyfrag  part_03.pyfrag  part_04.pyfrag  part_05.pyfrag  part_06.pyfrag  part_07.pyfrag  part_08.pyfrag  part_09.pyfrag  part_10.pyfrag
TRACE_R_reproducibility/tests/: test_reproducibility_contract.py
